tests/baselines/reference/importDeclWithDeclareModifier.errors.txt
==== tests/cases/compiler/importDeclWithDeclareModifier.ts (2 errors) ====
    module x {
        interface c {
        }
    }
    declare export import a = x.c;
    ~~~~~~~
!!! error TS1079: 'declare' modifier not allowed on import declaration.
                                ~
!!! error TS2178: Could not find symbol 'c' in module 'x'.
    var b: a;
    